--- a/README.Rmd
+++ b/README.Rmd
@@ -15,4 +15,4 @@ knitr::opts_chunk$set(
 
 This repository contains the R code and other materials for the paper "Sodium silicate and hexametaphosphate promote the release of (oxyhydr)oxide nanoparticles from corroding iron" (soon to be available as a preprint). 
 
-<!-- If you clone the repository, make sure to run the script `R/clean_fff.R` to write the files *fff_combined.csv* and *mals_combined.csv*, which have not been uploaded due to their size. When rendering, run `R/paper_build.R` to get the proper formatting for Arabic numeral citations. -->
+<!-- When rendering the .Rmd file, run `R/render_paper.R` to get the proper formatting for Arabic numeral citations. -->
