--- a/Rmarkdown/references.bib
+++ b/Rmarkdown/references.bib
@@ -252,7 +252,7 @@
     author = {{R Core Team}},
     organization = {R Foundation for Statistical Computing},
     address = {Vienna, Austria},
-    year = {2021},
+    year = {2022},
     url = {https://www.R-project.org/},
   }
 
@@ -636,4 +636,91 @@
 	author = {Ainsworth, Calvin C. and Gassman, Paul L. and Pilon, James L. and Van Der Sluys, William G.},
 	year = {1994},
 	pages = {1615},
+}
+
+
+@article{li_evaluation_2021,
+	title = {Evaluation of {Roundness} {Parameters} in {Use} for {Sand}},
+	volume = {147},
+	issn = {1090-0241, 1943-5606},
+	url = {https://ascelibrary.org/doi/10.1061/%28ASCE%29GT.1943-5606.0002585},
+	doi = {10.1061/(ASCE)GT.1943-5606.0002585},
+	language = {en},
+	number = {9},
+	urldate = {2022-06-22},
+	journal = {Journal of Geotechnical and Geoenvironmental Engineering},
+	author = {Li, Linzhu and Iskander, Magued},
+	month = sep,
+	year = {2021},
+	pages = {04021081},
+}
+
+
+@article{li_evaluation_2021,
+	title = {Evaluation of {Roundness} {Parameters} in {Use} for {Sand}},
+	volume = {147},
+	issn = {1090-0241, 1943-5606},
+	url = {https://ascelibrary.org/doi/10.1061/%28ASCE%29GT.1943-5606.0002585},
+	doi = {10.1061/(ASCE)GT.1943-5606.0002585},
+	language = {en},
+	number = {9},
+	urldate = {2022-06-22},
+	journal = {Journal of Geotechnical and Geoenvironmental Engineering},
+	author = {Li, Linzhu and Iskander, Magued},
+	month = sep,
+	year = {2021},
+	pages = {04021081},
+}
+
+
+@article{mcfadden_contributions_2011,
+	title = {Contributions to drinking water lead from galvanized iron corrosion scales},
+	volume = {103},
+	issn = {0003150X},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/j.1551-8833.2011.tb11437.x},
+	doi = {10.1002/j.1551-8833.2011.tb11437.x},
+	language = {en},
+	number = {4},
+	urldate = {2022-06-22},
+	journal = {Journal - American Water Works Association},
+	author = {McFadden, Matthew and Giani, Richard and Kwan, Pierre and Reiber, Steven H.},
+	month = apr,
+	year = {2011},
+	pages = {76--89},
+}
+
+
+@article{shi_lead_2020,
+	title = {Lead immobilization by phosphate in the presence of iron oxides: {Adsorption} versus precipitation},
+	volume = {179},
+	issn = {00431354},
+	shorttitle = {Lead immobilization by phosphate in the presence of iron oxides},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0043135420303900},
+	doi = {10.1016/j.watres.2020.115853},
+	language = {en},
+	urldate = {2022-06-23},
+	journal = {Water Research},
+	author = {Shi, Qiantao and Zhang, Shujuan and Ge, Jie and Wei, Jinshan and Christodoulatos, Christos and Korfiatis, George P. and Meng, Xiaoguang},
+	month = jul,
+	year = {2020},
+	pages = {115853},
+}
+
+
+
+
+@article{deshommes_source_2010,
+	title = {Source and occurrence of particulate lead in tap water},
+	volume = {44},
+	issn = {00431354},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0043135410002599},
+	doi = {10.1016/j.watres.2010.04.019},
+	language = {en},
+	number = {12},
+	urldate = {2020-05-12},
+	journal = {Water Research},
+	author = {Deshommes, Elise and Laroche, Laurent and Nour, Shokoufeh and Cartier, Clément and Prévost, Michèle},
+	month = jun,
+	year = {2010},
+	pages = {3734--3744},
 }
