--- a/Rmarkdown/references.bib
+++ b/Rmarkdown/references.bib
@@ -706,9 +706,6 @@
 	pages = {115853},
 }
 
-
-
-
 @article{deshommes_source_2010,
 	title = {Source and occurrence of particulate lead in tap water},
 	volume = {44},
@@ -724,3 +721,62 @@
 	year = {2010},
 	pages = {3734--3744},
 }
+
+
+@article{holm_characterizing_1990,
+	title = {Characterizing the {Lead}-{Complexing} {Properties} of {Polyphosphate} {Water} {Treatment} {Products} by {Competing}-{Ligand} {Spectrophotometry} {Using} 4-(2-{Pyridylazo}){Resorcinol}},
+	volume = {41},
+	issn = {0306-7319, 1029-0397},
+	url = {http://www.tandfonline.com/doi/abs/10.1080/03067319008030531},
+	doi = {10.1080/03067319008030531},
+	language = {en},
+	number = {1-2},
+	urldate = {2022-02-10},
+	journal = {International Journal of Environmental Analytical Chemistry},
+	author = {Holm, Thomas R. and Smothers, Sarah H.},
+	month = oct,
+	year = {1990},
+	pages = {71--82},
+}
+
+
+@article{holm_potential_1991,
+	title = {Potential {Effects} of {Polyphosphate} {Products} on {Lead} {Solubility} in {Plumbing} {Systems}},
+	volume = {83},
+	issn = {0003150X},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/j.1551-8833.1991.tb07182.x},
+	doi = {10.1002/j.1551-8833.1991.tb07182.x},
+	language = {en},
+	number = {7},
+	urldate = {2022-06-24},
+	journal = {Journal - American Water Works Association},
+	author = {Holm, Thomas R. and Shock, Michael R.},
+	month = jul,
+	year = {1991},
+	pages = {76--82},
+}
+
+
+@article{edwards_effect_2002,
+	title = {Effect of phosphate inhibitors on lead release from pipes},
+	volume = {94},
+	issn = {0003150X},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/j.1551-8833.2002.tb09383.x},
+	doi = {10.1002/j.1551-8833.2002.tb09383.x},
+	language = {en},
+	number = {1},
+	urldate = {2022-02-10},
+	journal = {Journal - American Water Works Association},
+	author = {Edwards, Marc and McNeill, Laurie S.},
+	month = jan,
+	year = {2002},
+	pages = {79--90},
+}
+
+@online{ggtext,
+    title = {{ggtext}: Improved Text Rendering Support for 'ggplot2'},
+    author = {Claus O. Wilke},
+    year = {2020},
+    note = {R package version 0.1.1},
+    url = {https://CRAN.R-project.org/package=ggtext},
+  }
